# smart-staffing

./: .gitignore  README.md  SCREENS.md  middleware.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/(protected)/: layout.tsx
app/(protected)/dashboard/: page.tsx
app/api/files/list/: route.ts
app/dashboard/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: smart_ingest.py
backend/app/services/: smart_chunk.py  smart_download.py  smart_embedding.py  smart_index.py
backend/app/utils/: format_list_for_prompt.py  normalize_whitespace.py  pinecone_manager.py  resume_metadata.py  sanitize_metadata.py  text_cleaner.py
components/: AuthPanel.tsx  LoginButtonClient.tsx  LoginLogoutButton.tsx  UserGreetText.tsx
components/login/: LoginButtonClient.tsx  LoginLogoutButton.tsx
components/signup/: SignUpButtonClient.tsx  SignUpLogoutButton.tsx
frontend/: README.md  tsconfig.json
frontend/app/: layout.tsx
frontend/app/(protected)/: layout.tsx
frontend/components/login/: LoginForm.tsx
frontend/components/signup/: SignUpForm.tsx
frontend/lib/: auth-actions.ts
frontend/lib/supabase/: client.ts  middleware.ts  server.ts
lib/: auth-server.ts  auth.ts
lib/supabase/: middleware.ts  server.ts
supabase/: schema.sql
types/: user.ts
webhook/edge-function/: README.md
webhook/edge-function/pdf-ingest/: index.ts
(+9 files in other folders)
